🚀 Deploy: 스토리북 크로마틱 자동 배포를 위한 workflows 설정

--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "test": "npm run test",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_110e2bf1eda4f6c"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/VACGOM/Vacgom-Design-System.git"
   },
-  "author": "osohyun0224",
+  "author": {
+    "name": "osohyun0224"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/VACGOM/Vacgom-Design-System/issues"
