--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@storybook/test": "^8.0.8",
     "chromatic": "^11.3.0",
     "prop-types": "^15.8.1",
-    "storybook": "^8.0.8"
+    "storybook": "^8.0.8",
+    "vite": "^5.2.10"
   }
 }
