--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,21 +1,39 @@
 name: 'Chromatic Deployment'
 
 on:
-  push:
+  pull_request:
     branches: ['master']
 
 jobs:
   test:
-        runs-on: ubuntu-latest
-        steps:
-          - uses: actions/checkout@v1
-          - name: Install Dependencies
-            run: npm install
-          - name: Build Storybook
-            run: npm run build-storybook --output-dir /tmp/chromatic--1852-xqjpeSXOepYf
-          - uses: chromaui/action@v1 
-            with:
-              projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
-              token: ${{ secrets.GITHUB_TOKEN }}
-    
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}-storybook
+
+      - name: Dependency install
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci
+
+      - name: Publish to Chromatic
+        id: chromatic
+        uses: chromaui/action@v1
+        with:
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          message: '🚀 Storybook published: ${{ steps.chromatic.outputs.storybookUrl }}'
