--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,6 +3,11 @@ name: 'Chromatic Deployment'
 on:
   push:
     branches: ['master']
+  pull_request:
+    branches: ['master']
+    types: [closed]
+    paths-ignore:
+      - '**.md'
 
 jobs:
   test:
@@ -32,6 +37,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Comment PR
+        if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
         uses: thollander/actions-comment-pull-request@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
