--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -5,9 +5,7 @@ on:
     branches: ['master']
   pull_request:
     branches: ['master']
-    types: [closed]
-    paths-ignore:
-      - '**.md'
+    types: [opened, synchronize, reopened]
 
 jobs:
   test:
