🐛 fix :: Manual Approvals 사용하는 걸로 변경

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -3,7 +3,7 @@ name: 'Chromatic Deployment'
 on:
   push:
     branches: ['master']
-  pull_request:
+  pull_request_target:
     branches: ['master']
     types: [opened, synchronize, reopened]
 
@@ -15,25 +15,21 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}-storybook
-
       - name: Dependency install
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
-
       - name: Publish to Chromatic
         id: chromatic
         uses: chromaui/action@v1
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           token: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Comment PR
         if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
         uses: thollander/actions-comment-pull-request@v1
