--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "storybook": "^8.0.8",
     "typescript": "^5.4.5",
     "vite": "^5.2.10"
+  },
+  "dependencies": {
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5"
   }
 }
