📦 chores: 기본 세팅에 필요한 패키지 설치

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+    },
     "outDir": "build",
     "module": "esnext",
     "target": "es5",
